[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/buttons/but_start.png" type="Texture" id=2]
[ext_resource path="res://assets/fundo.jpg" type="Texture" id=3]
[ext_resource path="res://assets/font/walibi-holland-webfont.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 4 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="bg_menu" type="Sprite" parent="."]
position = Vector2( -28, -24 )
scale = Vector2( 1.03021, 1.05185 )
texture = ExtResource( 3 )
centered = false

[node name="menu" type="HBoxContainer" parent="."]
margin_top = 825.0
margin_right = 1888.0
margin_bottom = 1027.0
alignment = 1

[node name="control" type="Control" parent="menu"]
margin_left = 679.0
margin_right = 1209.0
margin_bottom = 202.0
rect_min_size = Vector2( 530, 145 )

[node name="multiplayer" type="TouchScreenButton" parent="menu/control"]
position = Vector2( -54, -242 )
scale = Vector2( 1.76486, 2 )
normal = ExtResource( 2 )

[node name="label2" type="Label" parent="menu/control"]
anchor_left = -0.058
anchor_top = -1.178
anchor_right = 1.125
anchor_bottom = -0.347
margin_left = -0.259998
margin_top = -0.0439758
margin_right = -0.25
margin_bottom = 0.0940018
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 1 )
text = "multiplayer"
align = 1
valign = 1
uppercase = true

[node name="sigleplayer" type="TouchScreenButton" parent="menu/control"]
position = Vector2( -54, -482 )
scale = Vector2( 1.78811, 2.10989 )
normal = ExtResource( 2 )

[node name="label" type="Label" parent="menu/control"]
anchor_left = -0.089
anchor_top = -2.302
anchor_right = 1.189
anchor_bottom = -1.48
margin_left = 0.170002
margin_top = 0.0039978
margin_right = -0.169983
margin_bottom = -0.0400085
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 1 )
text = "Jogar Solo"
align = 1
valign = 1
uppercase = true

[node name="help" type="TouchScreenButton" parent="menu/control"]
position = Vector2( -56, -16 )
scale = Vector2( 1.77003, 2.08791 )
normal = ExtResource( 2 )

[node name="help2" type="Label" parent="menu/control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -103.0
margin_right = 330.0
margin_bottom = 61.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Ajuda"
align = 1
valign = 1
uppercase = true

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1911.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "PALAVR4"
align = 1

[connection signal="pressed" from="menu/control/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="menu/control/sigleplayer" to="." method="_on_sigleplayer_pressed"]
[connection signal="pressed" from="menu/control/help" to="." method="_on_help_pressed"]
